tests/errors/type_check/build/enum_duplicate_variant_name.sim

        enum E {
            A: unit
            A: i64
        }
        