tests/errors/type_check/build/enum_duplicate_variant_name.err.expected
error: at 4:13: [TC-DuplicateEnumVariant] In enum 'E', variant 'A' is declared more than once
   |
 4 |             A: i64
   |             ^^^^^^
